<resources>
    <string name="app_name">DH Art &amp; Museum</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">login with facebook</string>
    <string name="login_with_twitter">login with twitter</string>
    <string name="login_with_google">login with google</string>
    <string name="username">Username</string>
    <string name="e_mail">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_agree_with_terms_and_conditions">I agree with Terms and Conditions</string>
    <string name="DH"><![CDATA[ART & MUSEUM]]></string>
    <string name="action_settings">action_settings</string>
    <string name="facebook_app_id">199056994304541</string>
    <string name="fb_login_protocol_scheme">fb199056994304541</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_notification_channel_id">default</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
